--- a/SchedulingAlgorithms/makefile
+++ b/SchedulingAlgorithms/makefile
@@ -1,3 +1,3 @@
 all: part2.c
-	  gcc -w -g testpart2.c QueueOps.c part2.c  -Wall -pedantic -std=c99 -D_XOPEN_SOURCE=700 -pthread
+	  gcc -w -g testpart2.c QueueOps.c main.c part2.c -Wall -pedantic -std=c99 -D_XOPEN_SOURCE=700 -pthread
 
