Can now read N entries in the input file and save it in the Queue, and print the Queue

--- a/SchedulingAlgorithms/input.config
+++ b/SchedulingAlgorithms/input.config
@@ -1,8 +1,15 @@
 {
 $
 pid: 1
-arrival: 0
+arrival: 4
 cputime: 2
 frequency: 3
 ioduration: 4
+$
+pid: 2
+arrival: 5
+cputime: 6
+frequency: 3
+ioduration: 2
+
 }
